<resources>
    <string name="app_name">AceFx</string>
    <string name="app_logo_name">acefx</string>
    <string name="title_activity_sign_up">Signup to be a member of acefx</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="welcome">Welcome Back</string>
    <string name="name">Your Name</string>
    <string name="start_button">start now</string>
    <string name="flag_quiz_app">Flag Quiz App</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="enter_your_email_id">Enter your Email ID</string>
    <string name="employee_check">Employee</string>
    <string name="client_check">Client</string>
    <string name="submit_button">Send OTP</string>
    <string name="enter_otp_view">Enter OTP:</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="next_button">Next →</string>
    <string name="email_text">Your Email:</string>
    <string name="go_to_home">⬅ Go to home</string>
    <string name="client_check_text">Client</string>
    <string name="employee_check_text">Employee</string>
    <string name="text_client">Client</string>
    <string name="text_email_input">Enter your email</string>
    <string name="text_email_view">Email Address</string>
    <string name="text_app_description_view">Empowering Creative Workflows</string>
    <string name="text_sent_otp_view">Send OTP</string>
    <string name="hint_enter_otp_view">Enter OTP</string>
    <string name="text_verify_otp_view">Verify OTP</string>
    <string name="text_go_to_dashboard_view">Go to Dashboard</string>
    <string name="text_employee_view">Employee</string>
    <string name="text_select_your_role_view">Select Your Role</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_menu_home">Home</string>
    <string name="text_menu_projects">Projects</string>
    <string name="text_menu_account">Account</string>
    <string name="text_new_project">New Project</string>
    <string name="text_refresh_data">Refresh Data</string>
    <string name="text_goto_my_home">My Home</string>
    <string name="text_home_welcome">Welcome</string>
    <string name="text_home_description">Let\'s make today productive!</string>
    <string name="text_client_name">Client Name</string>
    <string name="text_add_project">Add Project</string>
    <string name="text_approved">Approved</string>
    <string name="text_on_hold">On Hold</string>
    <string name="text_project_name_view">Project Title</string>
    <string name="text_project_status_view">Status</string>
    <string name="text_submit_approval_view">Submit for Approval</string>
    <string name="text_expected_amount_view">Expected Amount</string>
    <string name="text_deadline_view">Deadline (yyyy-mm-dd)</string>
    <string name="text_attachlink_view">Attachment Link</string>
    <string name="text_datalink_hint">Data Link</string>
    <string name="text_description_hint">Description</string>
    <string name="text_project_title_hint">Project Title</string>
    <string name="text_addProduct_view">List New Project</string>
    <string name="text_deadline_dd_mm_yyyy">Deadline (dd/MM/yyyy)</string>
    <string name="text_budget">budget</string>
    <string name="text_budget_view">| Budget</string>
    <string name="text_project_name">Project Name</string>
    <string name="text_open_data_link">Open Data Link</string>
    <string name="text_open_attach_link">Open Attach Link</string>
    <string name="text_inr_5_000_infront">INR 5,000</string>
    <string name="text_pay_upfront">Pay Upfront</string>
    <string name="text_status_active">Active</string>
    <string name="text_all">All</string>
    <string name="text_paid">Paid</string>
    <string name="text_pending">Pending</string>
    <string name="text_overdue">Overdue</string>
    <string name="text_client_invoices">Client Invoices</string>
    <string name="text_amount">Amount</string>
    <string name="text_payment_history">Payment History</string>
    <string name="text_unpaid">unpaid</string>
    <string name="text_chat">Chat</string>
    <string name="text_send_message">Send Message</string>
    <string name="text_type_a_message">Type a message</string>
    <string name="text_back">Back</string>
    <string name="text_manage_account">Manage Account</string>
    <string name="text_update_your_account">Update Your Account</string>
    <string name="text_your_name">Your Name</string>
    <string name="text_company_individual_name">Company / Individual Name</string>
    <string name="text_phone_no">Phone No.</string>
    <string name="text_pin_code">Pin Code</string>
    <string name="text_update_account">Update Account</string>
    <string name="text_all_projects">All Projects</string>
    <string name="text_history">History</string>
    <string name="text_my_projects">My Projects</string>
    <string name="text_project_details">Project Details</string>
    <string name="text_date">Date</string>
    <string name="text_note">Note</string>
    <string name="text_extra_text">Thank you</string>
    <string name="text_invoice_details">Invoice Details</string>
    <string name="text_download_file">Download File</string>
    <string name="text_bill_amount">Total Bill Amount</string>
    <string name="text_transaction">Transaction ID: pay_KHJ23abx</string>
    <string name="text_back_to_dashboard">Back to Dashboard</string>
    <string name="text_payment_successful">Payment Successful!</string>
    <string name="text_image_success_icon">Success Icon</string>
    <string name="text_loading">Loading...</string>
    <string name="text_you_don_t_have_any_projects_yet_please_add_one">You don’t have any projects yet. Please add one.</string>
</resources>