<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="36dp"
    android:background="@drawable/bg"
    android:gravity="center"
    >

    <TextView
        android:text="@string/flag_quiz_app"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="15dp"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:gravity="center"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/welcome"
                android:textSize="30sp"/>
            <TextView
                android:text="@string/please_enter_your_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:textStyle="normal"
                android:textColor="@color/dark_gray"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"

                    />
            </com.google.android.material.textfield.TextInputLayout>



            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:hint="@string/name"


                />

            <Button
                android:id="@+id/button_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/start_button"
                android:textStyle="bold"
                android:textSize="22sp"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>


</androidx.appcompat.widget.LinearLayoutCompat>